# tm_solarshift

./: .gitignore  README.md  TL_parametric.py  TM_0D.py  data_proc_emissions_NEMED.py  mypy.ini  optim_events_simulation.py  pyproject.toml  testing.pkl
TRNSYS_layouts/: 0-Input_Control_Signal.csv  0-Input_PVGen.csv  TRNSYS_HPF_PVF_MX_W15.dck  TRNSYS_HPF_PVF_MX_W15.lst  TRNSYS_HPF_PVF_MX_W15.tpf  TRNSYS_RS_PVF_MM_W15.dck  TRNSYS_RS_PVF_MM_W15.tpf  TRNSYS_RS_PVF_MM_W15_v1.dck  TRNSYS_RS_PVF_MM_W15_v1.tpf  TRNSYS_RS_PVF_MM_W15_v2.dck  TRNSYS_RS_PVF_MM_W15_v2.tpf  TRNSYS_RS_PVF_MM_W15_v3.tpf  TRNSYS_RS_PVF_MM_W9a.dck  TRNSYS_RS_PVF_MM_W9a.lst  TRNSYS_RS_PVF_MM_W9a.tpf  TRNSYS_RS_PVF_MM_W9a_v1.tpf  TRNSYS_RS_PVF_MX_W15.PTI  TRNSYS_RS_PVF_MX_W15.dck  TRNSYS_RS_PVF_MX_W15.lst  TRNSYS_RS_PVF_MX_W15.tpf  TRNSYS_RS_PVF_MX_W15_v2.tpf  TRNSYS_RS_PVF_MX_W15_v3.tpf  TRNSYS_RS_PVF_MX_W9a.dck  TRNSYS_RS_PVF_MX_W9a.lst  TRNSYS_RS_PVF_MX_W9a.tpf  TRNSYS_RS_PVF_MX_W9a_v2.tpf  TRNSYS_RS_PVF_MX_W9a_v3.tpf  TRNSYS_Simple_HWT.tpf
dev/: SA_Solarshift_data.py  SA_data_exploration.py  energy_cost_cases.csv  energy_plan.py  load_profiles_all.py  pvlib_for_solarshift.py  solar_thermal_SAM.sam  tariffs.py
examples/: parametric_analysis.py  simple_example.py
old/: finance_old.py  general.py  profiles.py  pvlib_utils.py  trnsys.py
projects/: simple_example.py
testing/: testing_general.py  testing_profiles.py
tests/: test_controller.py  test_dewh.py  test_financial.py  test_general.py  test_market.py  test_models.py  testing_general.py  testing_profiles.py
tm_solarshift/: .dodsrc  hwd.py  (+28 more)
(+102 files in other folders)
