[tool.poetry]
name = "tm-solarshift"
version = "0.1.0"
description = "Thermal modelling and other utilities for analysis in project Solarshift"
authors = ["David Saldivia"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
SciPy = "^1.11.4"
scikit-learn = "^1.3.2"
openpyxl = "^3.1.2"
xarray = "^2024.2.0"
netcdf4 = "^1.6.5"
requests = "^2.31.0"
pydap = "^3.4.1"
pvlib = "^0.10.3"
nemosis = "^3.4.0"
mypy = "^1.9.0"
jupyter = "^1.0.0"
pandas-stubs = "^2.2.1.240316"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
