[tool.poetry]
name = "tm-solarshift"
version = "0.1.0"
description = "Thermal modelling and other utilities for analysis in project Solarshift"
authors = ["David Saldivia <david.saldivia.s@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
openpyxl = "^3.1.5"
xarray = "^2024.9.0"
netcdf4 = "^1.7.1.post2"
requests = "^2.32.3"
pydap = "^3.5"
pvlib = "^0.11.0"
mypy = "^1.11.2"
jupyter = "^1.1.1"
pandas-stubs = "^2.2.2.240909"
pytest = "^8.3.3"
salib = "^1.5.1"
seaborn = "^0.13.2"
coverage = "^7.6.1"
pytest-cov = "^5.0.0"
sphinx = "^8.1.3"
furo = "^2024.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
